--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-lib*.a
+# Object files
+*.o
+
+# Libraries
+*.lib
+*.a
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
 testbus-master
 testbus-client
 testbus-agent
