Fix some etc files
Signed-off-by: Olaf Kirch <okir@suse.de>

--- a/etc/org.opensuse.Testbus.conf
+++ b/etc/org.opensuse.Testbus.conf
@@ -8,6 +8,19 @@
 
   <policy user="root">
     <allow own="org.opensuse.Testbus"/>
+
+    <!-- This is awkward, but I've found no better way to do this -->
+    <allow own="org.opensuse.Testbus.Agent0"/>
+    <allow own="org.opensuse.Testbus.Agent1"/>
+    <allow own="org.opensuse.Testbus.Agent2"/>
+    <allow own="org.opensuse.Testbus.Agent3"/>
+    <allow own="org.opensuse.Testbus.Agent4"/>
+    <allow own="org.opensuse.Testbus.Agent5"/>
+    <allow own="org.opensuse.Testbus.Agent6"/>
+    <allow own="org.opensuse.Testbus.Agent7"/>
+    <allow own="org.opensuse.Testbus.Agent8"/>
+    <allow own="org.opensuse.Testbus.Agent9"/>
+
     <allow send_destination="org.opensuse.Testbus" />
   </policy>
 </busconfig>
