dbus config: Add <allow send_destination="org.opensuse.Testbus.Agent*>
Signed-off-by: Olaf Kirch <okir@suse.de>

--- a/etc/org.opensuse.Testbus.conf
+++ b/etc/org.opensuse.Testbus.conf
@@ -22,6 +22,16 @@
     <allow own="org.opensuse.Testbus.Agent9"/>
 
     <allow send_destination="org.opensuse.Testbus" />
+    <allow send_destination="org.opensuse.Testbus.Agent0" />
+    <allow send_destination="org.opensuse.Testbus.Agent1" />
+    <allow send_destination="org.opensuse.Testbus.Agent2" />
+    <allow send_destination="org.opensuse.Testbus.Agent3" />
+    <allow send_destination="org.opensuse.Testbus.Agent4" />
+    <allow send_destination="org.opensuse.Testbus.Agent5" />
+    <allow send_destination="org.opensuse.Testbus.Agent6" />
+    <allow send_destination="org.opensuse.Testbus.Agent7" />
+    <allow send_destination="org.opensuse.Testbus.Agent8" />
+    <allow send_destination="org.opensuse.Testbus.Agent9" />
   </policy>
 </busconfig>
 
